Get excel list and fix date in get comment

--- a/GiaSuBK.BLL/GiaSuBK.BLL.csproj
+++ b/GiaSuBK.BLL/GiaSuBK.BLL.csproj
@@ -67,6 +67,7 @@
     <Compile Include="GetClassInfo.cs" />
     <Compile Include="GetClassList.cs" />
     <Compile Include="CreateParentComment.cs" />
+    <Compile Include="GetExcelStudentReqList.cs" />
     <Compile Include="GetFindingClassList.cs" />
     <Compile Include="GetParentBasicInfo.cs" />
     <Compile Include="GetParentReqList.cs" />
