--- a/GiaSuBachKhoaAPI/GiaSuBachKhoaAPI.csproj
+++ b/GiaSuBachKhoaAPI/GiaSuBachKhoaAPI.csproj
@@ -135,6 +135,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="ZaloDotNetSDK, Version=2.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\vng.zalo.ZaloDotNetSDK.2.1.2\lib\net452\ZaloDotNetSDK.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
