--- a/GiaSuBK.BLL/packages.config
+++ b/GiaSuBK.BLL/packages.config
@@ -3,8 +3,10 @@
   <package id="Flurl" version="2.8.2" targetFramework="net452" />
   <package id="Flurl.Http" version="2.4.2" targetFramework="net452" />
   <package id="log4net" version="2.0.17" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="Otp.NET" version="1.3.0" targetFramework="net452" />
   <package id="System.Linq" version="4.3.0" targetFramework="net452" />
   <package id="TOTP" version="1.0.0" targetFramework="net452" />
+  <package id="vng.zalo.ZaloDotNetSDK" version="2.1.2" targetFramework="net452" />
 </packages>
