--- a/GiaSuBachKhoaAPI/packages.config
+++ b/GiaSuBachKhoaAPI/packages.config
@@ -25,5 +25,6 @@
   <package id="System.Memory" version="4.5.5" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net452" />
+  <package id="vng.zalo.ZaloDotNetSDK" version="2.1.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
